--- a/category.html
+++ b/category.html
@@ -223,33 +223,33 @@
                         <div class="container-fluid">
                             <div class="collapse navbar-collapse header-nav" id="navbarNav">
                                 <ul class="navbar-nav">
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
                                             aria-current="page" href="category.html">প্রচ্ছদ</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
                                             aria-current="page" href="category.html">সর্বশেষ</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
                                             aria-current="page" href="category.html">জাতীয়</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
                                             aria-current="page" href="category.html">রাজনীতি</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
                                             aria-current="page" href="category.html">অর্থকড়ি</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
                                             aria-current="page" href="category.html">বিশেষ প্রতিবেদন</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
                                             aria-current="page" href="category.html">বিশ্বগ্রাম</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
                                             aria-current="page" href="category.html">রূপসী বাংলা</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
                                             aria-current="page" href="category.html">খেলার ভুবন</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
                                             aria-current="page" href="category.html">রঙ</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
                                             aria-current="page" href="category.html">সুবর্ণরেখা</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
                                             aria-current="page" href="category.html">সাহিত্যসভা</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
                                             aria-current="page" href="category.html">ইসলাম</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
                                             aria-current="page" href="category.html">চট্টগ্রামের খবর</a></li>
                                 </ul>
                             </div>
