--- a/category.html
+++ b/category.html
@@ -24,8 +24,8 @@
         <div class="container">
             <div class="row d-flex justify-content-between align-items-center mb-2">
                 <div class="col-7">
-                    <a href="<?php echo esc_url(home_url()) ?>"><img class="img-fluid w-100"
-                            src="<?php echo get_template_directory_uri() . '/images/logo.png'; ?>" alt=" Main Logo"></a>
+                    <a href="<?php echo esc_url(home_url()); ?>"><img class="img-fluid w-100"
+                            src="<?php echo get_template_directory_uri() . '/images/logo.png'; ?>" alt="Main Logo"></a>
                 </div>
 
 
@@ -49,7 +49,7 @@
                             <div class="offcanvas-header">
                                 <img class="img-fluid w-100 offcanvas-title" id="offcanvasExampleLabel"
                                     src="<?php echo get_template_directory_uri() . '/images/logo.png'; ?>"
-                                    alt=" Main Logo">
+                                    alt="Main Logo">
 
                                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
                                     aria-label="Close"></button>
@@ -186,8 +186,8 @@
                     </div>
                 </div>
                 <div class="col-md-6 d-flex justify-content-center">
-                    <a href="<?php echo esc_url(home_url()) ?>"><img class="img-fluid w-100"
-                            src="<?php echo get_template_directory_uri() . '/images/logo.png'; ?>" alt=" Main Logo"></a>
+                    <a href="<?php echo esc_url(home_url()); ?>"><img class="img-fluid w-100"
+                            src="<?php echo get_template_directory_uri() . '/images/logo.png'; ?>" alt="Main Logo"></a>
                 </div>
                 <div class="col-md-3 d-flex align-items-end flex-column">
                     <h3><a class="text-danger font-size-20 text-decoration-none d-flex align-items-end"
@@ -223,33 +223,33 @@
                         <div class="container-fluid">
                             <div class="collapse navbar-collapse header-nav" id="navbarNav">
                                 <ul class="navbar-nav">
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
                                             aria-current="page" href="category.html">প্রচ্ছদ</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
                                             aria-current="page" href="category.html">সর্বশেষ</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
                                             aria-current="page" href="category.html">জাতীয়</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
                                             aria-current="page" href="category.html">রাজনীতি</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
                                             aria-current="page" href="category.html">অর্থকড়ি</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
                                             aria-current="page" href="category.html">বিশেষ প্রতিবেদন</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
                                             aria-current="page" href="category.html">বিশ্বগ্রাম</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
                                             aria-current="page" href="category.html">রূপসী বাংলা</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
                                             aria-current="page" href="category.html">খেলার ভুবন</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
                                             aria-current="page" href="category.html">রঙ</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
                                             aria-current="page" href="category.html">সুবর্ণরেখা</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
                                             aria-current="page" href="category.html">সাহিত্যসভা</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
                                             aria-current="page" href="category.html">ইসলাম</a></li>
-                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal custom-link"
+                                    <li class="nav-item "><a class="nav-link text-white font-size-16 fw-normal"
                                             aria-current="page" href="category.html">চট্টগ্রামের খবর</a></li>
                                 </ul>
                             </div>
@@ -270,8 +270,8 @@
                                 aria-labelledby="offcanvasExamp01leLabel">
                                 <div class="offcanvas-header">
                                     <img class="img-fluid w-100 offcanvas-title" id="#offcanvasExample01"
-                                        src="<?php echo get_template_directory_uri() . '/images/logo.png'; ?>" alt=" Main
-                                        Logo">
+                                        src="<?php echo get_template_directory_uri() . '/images/logo.png'; ?>"
+                                        alt="Main Logo">
 
                                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
                                         aria-label="Close"></button>
@@ -397,7 +397,7 @@
                 <div class="row d-flex align-items-center border-bottom pb-3">
                     <div class="col-md-12 px-4 px-sm-3">
                         <a class="text-decoration-none text-dark font-size-20 text-bold"
-                            href="<?php echo esc_url(home_url()) ?>"> <i class="bi bi-house-door me-3"></i> জাতীয়</a>
+                            href="<?php echo esc_url(home_url()); ?>"> <i class="bi bi-house-door me-3"></i> জাতীয়</a>
                     </div>
 
                 </div>
@@ -424,7 +424,7 @@
                             <div class="image-lead-category position-relative bg-opacity">
                                 <a href="<?php the_permalink(); ?>"><img class="img-fluid w-100"
                                         src="<?php echo get_template_directory_uri() . '/images/lead-pic.webp'; ?>"
-                                        alt=" Lead Pic"></a>
+                                        alt="Lead Pic"></a>
 
                                 <h2 class="mb-0 font-size-26"><a
                                         class="text-decoration-none text-white p-md-3 p-2 lh-base"
@@ -448,7 +448,8 @@
                                     </div>
                                 </div>
                                 <div class="col-12">
-                                    <div class="images order-md-2 order-1 mb-md-3 mb-2 mb-2 mb-md-0">
+                                    <div
+                                        class="<?php get_template_directory_uri() . ' order-md-2 order-1 mb-md-3 mb-2 mb-2 mb-md-0">
                                         <a href="<?php the_permalink(); ?>"><img class="img-fluid w-100"
                                                 src="<?php echo get_template_directory_uri() . '/images/Untitled-3-1756103012.jpg'; ?>"
                                                 alt=" pic"></a>
@@ -479,7 +480,7 @@
                                 <div class="image">
                                     <a href="<?php the_permalink(); ?>"> <img class="img-fluid w-100"
                                             src="<?php echo get_template_directory_uri() . '/images/fatiksori.png'; ?>"
-                                            alt=" college"></a>
+                                            alt="college"></a>
                                 </div>
                                 <div class="heading">
                                     <h6 class="mt-3 lh-base"><a class="text-decoration-none text-dark font-size-20"
@@ -501,7 +502,7 @@
                                 <div class="image">
                                     <a href="<?php the_permalink(); ?>"> <img class="img-fluid w-100"
                                             src="<?php echo get_template_directory_uri() . '/images/fatiksori.png'; ?>"
-                                            alt=" college"></a>
+                                            alt="college"></a>
                                 </div>
                                 <div class="heading">
                                     <h6 class="mt-3 lh-base"><a class="text-decoration-none text-dark font-size-20"
@@ -522,7 +523,7 @@
                                 <div class="image">
                                     <a href="<?php the_permalink(); ?>"> <img class="img-fluid w-100"
                                             src="<?php echo get_template_directory_uri() . '/images/fatiksori.png'; ?>"
-                                            alt=" college"></a>
+                                            alt="college"></a>
                                 </div>
                                 <div class="heading">
                                     <h6 class="mt-3 lh-base"><a class="text-decoration-none text-dark font-size-20"
@@ -543,7 +544,7 @@
                                 <div class="image">
                                     <a href="<?php the_permalink(); ?>"> <img class="img-fluid w-100"
                                             src="<?php echo get_template_directory_uri() . '/images/fatiksori.png'; ?>"
-                                            alt=" college"></a>
+                                            alt="college"></a>
                                 </div>
                                 <div class="heading">
                                     <h6 class="mt-3 lh-base"><a class="text-decoration-none text-dark font-size-20"
@@ -565,7 +566,7 @@
                                 <div class="image">
                                     <a href="<?php the_permalink(); ?>"> <img class="img-fluid w-100"
                                             src="<?php echo get_template_directory_uri() . '/images/fatiksori.png'; ?>"
-                                            alt=" college"></a>
+                                            alt="college"></a>
                                 </div>
                                 <div class="heading">
                                     <h6 class="mt-3 lh-base"><a class="text-decoration-none text-dark font-size-20"
@@ -586,7 +587,7 @@
                                 <div class="image">
                                     <a href="<?php the_permalink(); ?>"> <img class="img-fluid w-100"
                                             src="<?php echo get_template_directory_uri() . '/images/fatiksori.png'; ?>"
-                                            alt=" college"></a>
+                                            alt="college"></a>
                                 </div>
                                 <div class="heading">
                                     <h6 class="mt-3 lh-base"><a class="text-decoration-none text-dark font-size-20"
@@ -654,7 +655,7 @@
                                         <div class="col-5 col-md-12">
                                             <a href="<?php the_permalink(); ?>"> <img class="img-fluid w-100"
                                                     src="<?php echo get_template_directory_uri() . '/images/cadet-college.png'; ?>"
-                                                    alt=" college"></a>
+                                                    alt="college"></a>
                                         </div>
                                     </div>
                                 </div>
@@ -672,7 +673,7 @@
                                         <div class="col-5 col-md-12">
                                             <a href="<?php the_permalink(); ?>"> <img class="img-fluid w-100"
                                                     src="<?php echo get_template_directory_uri() . '/images/cadet-college.png'; ?>"
-                                                    alt=" college"></a>
+                                                    alt="college"></a>
                                         </div>
                                     </div>
                                 </div>
@@ -690,7 +691,7 @@
                                         <div class="col-5 col-md-12">
                                             <a href="<?php the_permalink(); ?>"> <img class="img-fluid w-100"
                                                     src="<?php echo get_template_directory_uri() . '/images/cadet-college.png'; ?>"
-                                                    alt=" college"></a>
+                                                    alt="college"></a>
                                         </div>
                                     </div>
                                 </div>
@@ -708,7 +709,7 @@
                                         <div class="col-5 col-md-12">
                                             <a href="<?php the_permalink(); ?>"> <img class="img-fluid w-100"
                                                     src="<?php echo get_template_directory_uri() . '/images/cadet-college.png'; ?>"
-                                                    alt=" college"></a>
+                                                    alt="college"></a>
                                         </div>
                                     </div>
                                 </div>
@@ -975,10 +976,10 @@
             <div class="row">
                 <div class="col-12">
                     <div class="logo-footer">
-                        <a href="<?php echo esc_url(home_url()) ?>" class="d-flex justify-content-center"><img
+                        <a href="<?php echo esc_url(home_url()); ?>" class="d-flex justify-content-center"><img
                                 class="mw-75-percent"
-                                src="<?php echo get_template_directory_uri() . '/images/logo-footer.png'; ?>" alt="
-                                Logo"></a>
+                                src="<?php echo get_template_directory_uri() . '/images/logo-footer.png'; ?>"
+                                alt="Logo"></a>
                     </div>
                     <div class="editor-section text-center">
                         <div
@@ -1062,9 +1063,9 @@
             <div class="row">
                 <div class="col-md-5">
                     <div class="logo-footer">
-                        <a href="<?php echo esc_url(home_url()) ?>"><img
-                                src="<?php echo get_template_directory_uri() . '/images/logo-footer.png'; ?>" alt="
-                                Logo"></a>
+                        <a href="<?php echo esc_url(home_url()); ?>"><img
+                                src="<?php echo get_template_directory_uri() . '/images/logo-footer.png'; ?>"
+                                alt="Logo"></a>
                     </div>
                     <div class="editor-section">
                         <div class="editor d-flex justify-content-start align-items-center mt-md-5 mt-3">
